# oxo-call

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_PLAN.md  LICENSE  LICENSE-ACADEMIC  LICENSE-COMMERCIAL  Makefile  PHASE1.4_SUMMARY.md  PHASE1_SUMMARY.md  README.md  cliff.toml  issue-license.sh  lcov.info
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  skill_request.md
.github/workflows/: ci.yml  pages.yml
crates/license-issuer/: Cargo.toml
crates/license-issuer/src/: main.rs
crates/oxo-bench/: Cargo.toml
crates/oxo-bench/benches/: template_parse.rs  workflow_expand.rs
crates/oxo-bench/src/: config.rs  lib.rs  main.rs  report.rs
crates/oxo-bench/src/bench/: compare.rs  llm.rs  mod.rs  runner.rs  scenario.rs  workflow.rs
crates/oxo-bench/src/sim/: fastq.rs  genome.rs  mod.rs  omics.rs
docs/: bench_eval_tasks.csv  bench_scenarios.csv  bench_workflow.csv  index.html  public-academic-test-license.oxo.json
docs/architecture/: unified-cli-architecture.md
docs/bench/: BENCHMARK.md  baseline_comparison.csv  baseline_error_analysis.csv  baseline_summary.csv  bench_eval_tasks.csv  bench_workflow.csv  error_analysis.csv  filter_bench_data.py  model_summary.csv  model_summary_by_category.csv  model_summary_by_tool.csv  reference_commands.csv  usage_descriptions.csv
docs/guide/: book.toml  mkdocs.yml
docs/guide/src/: SUMMARY.md  index.md  introduction.md
docs/guide/src/commands/: chat.md  completion.md  config.md  docs.md  dry-run.md  history.md  job.md  license.md  run.md  server.md  skill.md  workflow.md
docs/guide/src/development/: contributing.md  evaluation-reports.md
docs/guide/src/how-to/: add-tool-docs.md  build-pipeline.md  change-llm-provider.md  create-custom-skill.md
docs/guide/src/reference/: architecture.md  documentation-system.md  license-system.md  llm-integration.md  mcp-skill-provider.md  security-considerations.md  skill-system.md  workflow-engine.md
docs/guide/src/stylesheets/: extra.css
docs/guide/src/tutorials/: bam-workflow.md  configuration.md  first-command.md  installation.md  license.md  quickstart.md  rnaseq-walkthrough.md  workflow-builder.md
docs/superpowers/backlog/: 2026-04-23-oxo-call-backlog.md
docs/superpowers/plans/: 2026-04-23-oxo-call-optimization.md  2026-04-26-chat-mode-optimization.md
docs/superpowers/specs/: 2026-04-23-oxo-call-optimization-design.md  2026-04-24-skill-generator-enhancement-design.md  2026-04-26-chat-mode-optimization-design.md
examples/: rag_benchmark.rs
manuscript/: cover_letter.md  manuscript.md  supplementary_materials.md
manuscript/reviews/: expert_reviews.md
review/: COMPREHENSIVE_AUDIT_REPORT_v1.0.md  GITHUB_ISSUES.md  bioinfo_audit.md  llm_audit.md  performance_audit.md
scripts/: create_issues.sh
skill/: 10x_bamtofastq.md  2pg_cartesian.md  a-liner.md  a3partitioner.md  a5-miseq.md  aacon.md  aakomp.md  aardvark.md  aastk.md  abacas.md  abacat.md  abawaca.md  abeona.md  abismal.md  abnumber.md  abpoa.md  abra2.md  abricate.md  abritamr.md  abromics_galaxy_json_extractor.md  abruijn.md  absense.md  abyss-k128.md  abyss.md  ac-diamond.md  ac.md  accusnv.md  acdc.md  acedrg.md  aci.md  acms.md  actc.md  adam.md  adapt.md  adapterremoval.md  adapterremovalfixprefix.md  adas.md  addeam.md  addrg.md  admixtools.md  (+6043 more)
skills/: admixture.md  admixture.toml  agat.md  agat.toml  angsd.md  angsd.toml  annot8r.md  annot8r.toml  arriba.md  arriba.toml  augustus.md  augustus.toml  awk.md  awk.toml  bakta.md  bakta.toml  bamtools.md  bamtools.toml  bash.md  bbtools.md  bcftools.md  bcftools.toml  bedops.md  bedops.toml  bedtools.md  bedtools.toml  bismark.md  bismark.toml  blast.md  blast.toml  bowtie2.md  bowtie2.toml  bracken.md  bracken.toml  busco.md  busco.toml  bwa-mem2.md  bwa-mem2.toml  bwa.md  bwa.toml  (+256 more)
src/: auto_fixer.rs  cache.rs  chat.rs  cli.rs  cli_pattern.rs  cmd.rs  command_assembler.rs  command_corrector.rs  command_validator.rs  config.rs  constraint_graph.rs  context.rs  copilot_auth.rs  doc_enhancer.rs  doc_explorer.rs  doc_processor.rs  doc_summarizer.rs  docs.rs  engine.rs  error.rs  format.rs  generator.rs  handlers.rs  history.rs  index.rs  intent_mapper.rs  job.rs  lib.rs  license.rs  llm.rs  llm_workflow.rs  main.rs  markdown.rs  mcp.rs  mini_skill_cache.rs  oauth.rs  pipeline.rs  reflection_engine.rs  runner.rs  sanitize.rs  (+14 more)
src/bench/: metrics.rs  mod.rs  rag_bench.rs  test_cases.rs
src/confidence/: mod.rs
src/execution/: feedback.rs  mod.rs  result_analyzer.rs
src/knowledge/: best_practices.rs  error_db.rs  mod.rs  tool_knowledge.rs
src/llm/: mod.rs  prompt.rs  provider.rs  response.rs  streaming.rs  tests.rs  types.rs
src/orchestrator/: executor.rs  mod.rs  planner.rs  supervisor.rs  validator.rs
src/rag/: embedding.rs  mod.rs  rag_enhancer.rs  retriever.rs  vector_store.rs
src/runner/: batch.rs  core.rs  mod.rs  retry.rs  tests.rs  utils.rs  validation.rs
src/schema/: generator.rs  integration_test.rs  mod.rs  post_process.rs  types.rs
src/schema/parser/: generic.rs  mod.rs  python.rs
tests/: cli_tests.rs
tests/fixtures/: test_license.oxo.json
workflows/native/: amplicon16s.toml  atacseq.toml  chipseq.toml  longreads.toml  metagenomics.toml  methylseq.toml  rnaseq.toml  scrnaseq.toml  wgs.toml
workflows/nextflow/: amplicon16s.nf  atacseq.nf  chipseq.nf  longreads.nf  metagenomics.nf  methylseq.nf  rnaseq.nf  scrnaseq.nf  wgs.nf
workflows/snakemake/: amplicon16s.smk  atacseq.smk  chipseq.smk  longreads.smk  metagenomics.smk  methylseq.smk  rnaseq.smk  scrnaseq.smk  wgs.smk
