[workspace]
members = [".", "crates/license-issuer", "crates/oxo-bench"]

[package]
name = "oxo-call"
version = "0.11.0"
edition = "2024"
description = "Model-intelligent orchestration for CLI bioinformatics — call any tool with LLM intelligence"
authors = ["Traitome <https://github.com/Traitome>"]
license-file = "LICENSE"
keywords = ["bioinformatics", "llm", "cli", "automation", "ngs"]
categories = ["command-line-utilities", "science"]
readme = "README.md"
repository = "https://github.com/Traitome/oxo-call"
homepage = "https://github.com/Traitome/oxo-call"

[dependencies]
clap = { version = "4.6", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.0"
color-eyre = "0.6"
thiserror = "2.0"
colored = "3.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
ed25519-dalek = "2"
base64 = "0.22"
sha2 = "0.10"
clap_complete = "4.6"
oxo-license = "0.1.1"
async-trait = "0.1"
tracing = "0.1"
regex = "1.12.3"

# ── Native-only dependencies (not available on wasm32) ────────────────────────
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }
directories = "6.0"
which = "8.0"
indicatif = "0.18"

# ── WebAssembly dependencies ──────────────────────────────────────────────────
[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { version = "1", features = ["rt", "macros"] }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
